# percolator-cli

./: .gitignore  DEPLOY_CHECKLIST.md  FINDING-insurance-drain.md  KILLCHAIN_ANALYSIS.md  README.md  REPRODUCE.md  bounty5-cross-margin-isolation-audit.md  bounty5-v16-devnet.json  devnet-market.json  mainnet-bounty5-v16-market.json  mainnet-market.json  mainnet-stoxx-sol-market.json  package-lock.json  package.json  state.json  tsconfig.tests.json  verified-matcher.json
matcher/credibility/: Cargo.toml  README.md
matcher/credibility/src/: lib.rs
scripts/: .bounty5-v16-cron.txt  _default-market.ts  _devnet-survey.ts  _exploit.ts  _find-mainnet-portfolios.ts  _inspect-portfolios.ts  _repro-rotate.ts  _verify-mainnet-market.ts  admin-close-stoxx-keeper-pf.ts  admin-configure-stoxx-hybrid-oracle.ts  admin-create-stoxx-keeper-pf.ts  admin-free-test.ts  admin-reanchor-stoxx-oracle.ts  admin-recreate-stoxx-keeper-pf-oldsize.ts  admin-winddown-stoxx-sol.ts  adversarial-test.ts  audit-adversarial.ts  audit-deep-redteam.ts  audit-funding-warmup.ts  audit-oracle-edge.ts  audit-redteam.ts  audit-timing-attacks.ts  bug-margin-initial-vs-maintenance.ts  bug-recovery-overhaircut.ts  burn-mainnet-bounty2-authorities.ts  burn-mainnet-bounty3-authorities.ts  check-authorities.ts  check-conservation.ts  check-funding.ts  check-liquidation.ts  check-maint-fees.ts  check-params.ts  cleanup-devnet-v16.ts  close-all-slabs.ts  close-broken-lps.ts  close-slabs.ts  complete-setup.ts  crank-bot.ts  credibility-update-bot.ts  deploy-bounty5-v16.ts  (+63 more)
src/: cli.ts  config.ts  index.ts  (+1 more)
(+123 files in other folders)
